import("//build/templates/build_template.gni")

build_rust("heapless") {
  epoch = "0.8"
  crate_type = "rlib"
  sources = [ "//external/heapless/v0.8.0/src/lib.rs" ]
  inputs = []
  edition = "2021"
  deps = [
    "//external/hash32/v0.3.1:hash32",
    "//external/stable-deref-trait/v1.2.0:stable_deref_trait",
  ]

  rustflags = [
    "--cap-lints=allow",  # Suppress all warnings in crates.io crates
  ]
}
